# CustomerSupport

./: .gitignore  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: c69d4e6d4b74_initial_tables.py
src/core/: config.py  llm_factory.py  logging.py
src/db/: base_model.py  database.py
src/db/enums/: order_status.py
src/db/models/: customers.py  orders.py
src/db/repositories/: customer_repository.py  order_repository.py
src/services/: customer_service.py  order_service.py
