[project]
name = "customersupport"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.2.0",
    "fastapi>=0.139.0",
    "langchain>=1.3.13",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "supabase>=2.31.0",
    "uvicorn>=0.51.0",
]
